group 'team10'
version '1.0-SNAPSHOT'
 
apply plugin: 'java'
apply plugin: 'application'
mainClassName = "application.Main"
 
sourceCompatibility = 8

repositories {
    mavenCentral()
}

task fatJar(type: Jar) {
    manifest {
        attributes 'Implementation-Title': 'Mealtime',
                'Implementation-Version': 1.0,
                'Main-Class': 'application.Main'
    }
    baseName = project.name + '-all'
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

def jdkHome = System.getenv("JAVA_HOME")

dependencies {
//    compile files("$jdkHome/lib/tools.jar")
	
	compile 'org.xerial:sqlite-jdbc:3.8.11.2'

}

sourceSets {
	main{
		java.srcDir "src"
		
		resources{
			srcDirs = ["src"]
			includes = ["**/*.fxml"]
		}
	}
}

// Declares binary plugin and its required JavaFX classpath
apply from: "http://dl.bintray.com/content/shemnon/javafx-gradle/8.1.1/javafx.plugin"

// Configures plugin
javafx {
    // Points to JDK and its JavaFX libraries, also declares target runtime JDK
    javaRuntime = 'C:/Program Files/Java/jdk1.8.0_65'
    
    // Application name and ID presented by target OS
    appID 'Mealtime'
    appName 'Team 10 Mealtime'
    
    // Main class of application
    mainClass 'application.Main'
    
    // JVM arguments, system properties, application command line arguments
    jvmArgs = ['-XX:+AggressiveOpts', '-XX:CompileThreshold=1']
    systemProperties = ['prism.disableRegionCaching':'true']
    arguments = ['-l', '--fast']

    
    // ...
}

